sau khi thầy tân góp ý

--- a/index.html
+++ b/index.html
@@ -24,23 +24,43 @@
 								<label class="form-label d-block" for="name"
 									>Tên sản phẩm</label
 								>
-								<input class="d-block" type="text" id="name" />
+								<input
+									class="d-block"
+									type="text"
+									id="name"
+									placeholder=" Tên sản phẩm"
+								/>
 							</div>
 							<div>
 								<label class="form-label d-block" for="price"
 									>Giá sản phẩm</label
 								>
-								<input class="d-block" type="text" id="price" />
+								<input
+									class="d-block"
+									type="text"
+									id="price"
+									placeholder=" Giá sản phẩm"
+								/>
 							</div>
 							<div>
 								<label class="form-label d-block" for="amount">Số lượng</label>
-								<input class="d-block" type="text" id="amount" />
+								<input
+									class="d-block"
+									type="text"
+									id="amount"
+									placeholder=" Số lượng"
+								/>
 							</div>
 							<div>
 								<label class="form-label d-block" for="description"
 									>Mô tả</label
 								>
-								<textarea class="d-block des mb-3" type="text" id="description">
+								<textarea
+									class="d-block des mb-3"
+									type="text"
+									id="description"
+									placeholder="Mô tả"
+								>
 								</textarea>
 							</div>
 							<div class="controller d-flex justify-content-between">
@@ -54,7 +74,7 @@
 			</div>
 			<div class="right">
 				<form class="search-form form d-flex justify-content-around mb-3 mt-5">
-					<input class="search" type="text" />
+					<input class="search" type="text"  placeholder="  Search"/>
 					<button class="btn-icon">
 						<img
 							class="icon-img"
